--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -43,7 +43,8 @@ steps:
       JULIA_CUDA_VERSION: '11.4'
       JULIA_CUDA_DEBUG_INFO: 'false'  # NVIDIA bug #3305774: ptxas segfaults with out debug info
       JULIA_CUDA_USE_BINARYBUILDER: 'true'
-    if: build.message !~ /\[skip tests\]/
+    if: build.message !~ /\[skip tests\]/ &&
+        !build.pull_request.draft
     timeout_in_minutes: 120
 
   - label: "Julia 1.7"
@@ -60,7 +61,7 @@ steps:
     agents:
       queue: "juliagpu"
       cuda: "*"
-    if: build.message !~ /\[skip tests\]/
+    if: build.message !~ /\[skip tests\]/ && !build.pull_request.draft
     timeout_in_minutes: 120
 
   - label: "Julia 1.8"
@@ -77,7 +78,7 @@ steps:
     agents:
       queue: "juliagpu"
       cuda: "*"
-    if: build.message !~ /\[skip tests\]/
+    if: build.message !~ /\[skip tests\]/ && !build.pull_request.draft
     timeout_in_minutes: 120
     soft_fail:
       - exit_status: 1
@@ -110,7 +111,7 @@ steps:
     env:
       JULIA_CUDA_VERSION: '11.4'
       JULIA_CUDA_USE_BINARYBUILDER: 'true'
-    if: build.message !~ /\[skip tests\]/
+    if: build.message !~ /\[skip tests\]/ && !build.pull_request.draft
     timeout_in_minutes: 120
 
   - label: "CUDA 11.3"
@@ -130,7 +131,7 @@ steps:
     env:
       JULIA_CUDA_VERSION: '11.3'
       JULIA_CUDA_USE_BINARYBUILDER: 'true'
-    if: build.message !~ /\[skip tests\]/
+    if: build.message !~ /\[skip tests\]/ && !build.pull_request.draft
     timeout_in_minutes: 120
 
   - label: "CUDA 11.2"
@@ -150,7 +151,7 @@ steps:
     env:
       JULIA_CUDA_VERSION: '11.2'
       JULIA_CUDA_USE_BINARYBUILDER: 'true'
-    if: build.message !~ /\[skip tests\]/
+    if: build.message !~ /\[skip tests\]/ && !build.pull_request.draft
     timeout_in_minutes: 120
 
   - label: "CUDA 11.1"
@@ -170,7 +171,7 @@ steps:
     env:
       JULIA_CUDA_VERSION: '11.1'
       JULIA_CUDA_USE_BINARYBUILDER: 'true'
-    if: build.message !~ /\[skip tests\]/
+    if: build.message !~ /\[skip tests\]/ && !build.pull_request.draft
     timeout_in_minutes: 120
 
   - label: "CUDA 11.0"
@@ -190,7 +191,7 @@ steps:
     env:
       JULIA_CUDA_VERSION: '11.0'
       JULIA_CUDA_USE_BINARYBUILDER: 'true'
-    if: build.message !~ /\[skip tests\]/
+    if: build.message !~ /\[skip tests\]/ && !build.pull_request.draft
     timeout_in_minutes: 120
 
   - label: "CUDA 10.2"
@@ -210,7 +211,7 @@ steps:
     env:
       JULIA_CUDA_VERSION: '10.2'
       JULIA_CUDA_USE_BINARYBUILDER: 'true'
-    if: build.message !~ /\[skip tests\]/
+    if: build.message !~ /\[skip tests\]/ && !build.pull_request.draft
     timeout_in_minutes: 120
 
   - label: "CUDA 10.1"
@@ -230,7 +231,7 @@ steps:
     env:
       JULIA_CUDA_VERSION: '10.1'
       JULIA_CUDA_USE_BINARYBUILDER: 'true'
-    if: build.message !~ /\[skip tests\]/
+    if: build.message !~ /\[skip tests\]/ && !build.pull_request.draft
     timeout_in_minutes: 120
 
 
@@ -250,7 +251,7 @@ steps:
     agents:
       queue: "juliagpu-windows"
       cuda: "*"
-    if: build.message !~ /\[skip tests\]/
+    if: build.message !~ /\[skip tests\]/ && !build.pull_request.draft
     timeout_in_minutes: 120
 
   - label: "NNlibCUDA.jl"
@@ -276,7 +277,7 @@ steps:
     agents:
       queue: "juliagpu"
       cuda: "*"
-    if: build.message !~ /\[skip tests\]/
+    if: build.message !~ /\[skip tests\]/ && !build.pull_request.draft
     timeout_in_minutes: 60
 
 
@@ -315,7 +316,8 @@ steps:
       queue: "benchmark"
       cuda: "*"
     if: build.message !~ /\[skip benchmarks\]/ &&
-        build.branch =~ /^master$$/
+        build.branch =~ /^master$$/ &&
+        !build.pull_request.draft
     timeout_in_minutes: 30
 
   - wait
@@ -341,7 +343,8 @@ steps:
       queue: "juliagpu"
       cuda: "*"
     if: build.message !~ /\[skip benchmarks\]/ &&
-        build.branch !~ /^master$$/
+        build.branch !~ /^master$$/ &&
+        !build.pull_request.draft
     timeout_in_minutes: 30
 
   - label: "Documentation"
@@ -362,7 +365,7 @@ steps:
     agents:
       queue: "juliagpu"
       cuda: "*"
-    if: build.message !~ /\[skip docs\]/
+    if: build.message !~ /\[skip docs\]/ && !build.pull_request.draft
     timeout_in_minutes: 30
 
 
