Allow failure of debug CI job
Our current CI machines don't have enough memory for it.

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -46,6 +46,8 @@ steps:
     if: build.message !~ /\[skip tests\]/ &&
         !build.pull_request.draft
     timeout_in_minutes: 120
+    soft_fail:  # our current CI machines run out of memory during this job
+      - exit_status: 1
 
   - label: "Julia 1.7"
     plugins:
