--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -7,8 +7,8 @@ steps:
       - JuliaCI/julia#v1:
           version: 1.6
       - JuliaCI/julia-test#v1:
-          test_args: "--quickfail"
-      - JuliaCI/julia-coverage#v1:
+          test_args: "dontruntests"
+      - JuliaCI/julia-coverage#499cf0b:
           codecov: true
           dirs:
             - src
@@ -19,356 +19,6 @@ steps:
       cuda: "*"
     if: build.message !~ /\[skip tests\]/
     timeout_in_minutes: 120
-
-  - wait  # smoke test: don't kick off a large number of tests if they'd all just fail
-
-  # XXX: disabled due to memory requirements; re-enable on the new CI machines
-  # - label: "Julia 1.6 (debug)"
-  #   plugins:
-  #     - JuliaCI/julia#v1:
-  #         version: 1.6
-  #     - JuliaCI/julia-test#v1:
-  #         julia_args: "-g2"
-  #         test_args: "--sanitize --quickfail --jobs=2"
-  #     - JuliaCI/julia-coverage#v1:
-  #         codecov: true
-  #         dirs:
-  #           - src
-  #           - lib
-  #           - examples
-  #   agents:
-  #     queue: "juliagpu"
-  #     cuda: "11.0"
-  #     cap: "recent"                   # test as much as possible
-  #   env:
-  #     JULIA_CUDA_VERSION: '11.4'
-  #     JULIA_CUDA_DEBUG_INFO: 'false'  # NVIDIA bug #3305774: ptxas segfaults with out debug info
-  #     JULIA_CUDA_USE_BINARYBUILDER: 'true'
-  #   if: build.message !~ /\[skip tests\]/ &&
-  #       !build.pull_request.draft
-  #   timeout_in_minutes: 120
-
-  - label: "Julia 1.7"
-    plugins:
-      - JuliaCI/julia#v1:
-          version: 1.7-nightly
-      - JuliaCI/julia-test#v1: ~
-      - JuliaCI/julia-coverage#v1:
-          codecov: true
-          dirs:
-            - src
-            - lib
-            - examples
-    agents:
-      queue: "juliagpu"
-      cuda: "*"
-    if: build.message !~ /\[skip tests\]/ && !build.pull_request.draft
-    timeout_in_minutes: 120
-
-  - label: "Julia 1.8"
-    plugins:
-      - JuliaCI/julia#v1:
-          version: nightly
-      - JuliaCI/julia-test#v1: ~
-      - JuliaCI/julia-coverage#v1:
-          codecov: true
-          dirs:
-            - src
-            - lib
-            - examples
-    agents:
-      queue: "juliagpu"
-      cuda: "*"
-    if: build.message !~ /\[skip tests\]/ && !build.pull_request.draft
-    timeout_in_minutes: 120
-    soft_fail:
-      - exit_status: 1
-
-
-    # CUDA versions (from artifacts)
-
-    # NOTE: we support those CUDA versions for which the latest cuDNN is available
-    #       https://developer.nvidia.com/rdp/cudnn-archive
-
-    # NOTE: only the latest version of CUDA that has CUDNN & CUTENSOR is tested thoroughly.
-    #       once we have sufficient CI resources, expand this to all CUDA versions again.
-
-  - label: "CUDA 11.4"
-    plugins:
-      - JuliaCI/julia#v1:
-          version: 1.6
-      - JuliaCI/julia-test#v1:
-          test_args: "--thorough"
-      - JuliaCI/julia-coverage#v1:
-          codecov: true
-          dirs:
-            - src
-            - lib
-            - examples
-    agents:
-      queue: "juliagpu"
-      cuda: "11.0"
-      cap: "recent"
-    env:
-      JULIA_CUDA_VERSION: '11.4'
-      JULIA_CUDA_USE_BINARYBUILDER: 'true'
-    if: build.message !~ /\[skip tests\]/ && !build.pull_request.draft
-    timeout_in_minutes: 120
-
-  - label: "CUDA 11.3"
-    plugins:
-      - JuliaCI/julia#v1:
-          version: 1.6
-      - JuliaCI/julia-test#v1: ~
-      - JuliaCI/julia-coverage#v1:
-          codecov: true
-          dirs:
-            - src
-            - lib
-            - examples
-    agents:
-      queue: "juliagpu"
-      cuda: "11.0"
-    env:
-      JULIA_CUDA_VERSION: '11.3'
-      JULIA_CUDA_USE_BINARYBUILDER: 'true'
-    if: build.message !~ /\[skip tests\]/ && !build.pull_request.draft
-    timeout_in_minutes: 120
-
-  - label: "CUDA 11.2"
-    plugins:
-      - JuliaCI/julia#v1:
-          version: 1.6
-      - JuliaCI/julia-test#v1: ~
-      - JuliaCI/julia-coverage#v1:
-          codecov: true
-          dirs:
-            - src
-            - lib
-            - examples
-    agents:
-      queue: "juliagpu"
-      cuda: "11.0"
-    env:
-      JULIA_CUDA_VERSION: '11.2'
-      JULIA_CUDA_USE_BINARYBUILDER: 'true'
-    if: build.message !~ /\[skip tests\]/ && !build.pull_request.draft
-    timeout_in_minutes: 120
-
-  - label: "CUDA 11.1"
-    plugins:
-      - JuliaCI/julia#v1:
-          version: 1.6
-      - JuliaCI/julia-test#v1: ~
-      - JuliaCI/julia-coverage#v1:
-          codecov: true
-          dirs:
-            - src
-            - lib
-            - examples
-    agents:
-      queue: "juliagpu"
-      cuda: "11.0"
-    env:
-      JULIA_CUDA_VERSION: '11.1'
-      JULIA_CUDA_USE_BINARYBUILDER: 'true'
-    if: build.message !~ /\[skip tests\]/ && !build.pull_request.draft
-    timeout_in_minutes: 120
-
-  - label: "CUDA 11.0"
-    plugins:
-      - JuliaCI/julia#v1:
-          version: 1.6
-      - JuliaCI/julia-test#v1: ~
-      - JuliaCI/julia-coverage#v1:
-          codecov: true
-          dirs:
-            - src
-            - lib
-            - examples
-    agents:
-      queue: "juliagpu"
-      cuda: "11.0"
-    env:
-      JULIA_CUDA_VERSION: '11.0'
-      JULIA_CUDA_USE_BINARYBUILDER: 'true'
-    if: build.message !~ /\[skip tests\]/ && !build.pull_request.draft
-    timeout_in_minutes: 120
-
-  - label: "CUDA 10.2"
-    plugins:
-      - JuliaCI/julia#v1:
-          version: 1.6
-      - JuliaCI/julia-test#v1: ~
-      - JuliaCI/julia-coverage#v1:
-          codecov: true
-          dirs:
-            - src
-            - lib
-            - examples
-    agents:
-      queue: "juliagpu"
-      cuda: "10.2"
-    env:
-      JULIA_CUDA_VERSION: '10.2'
-      JULIA_CUDA_USE_BINARYBUILDER: 'true'
-    if: build.message !~ /\[skip tests\]/ && !build.pull_request.draft
-    timeout_in_minutes: 120
-
-  - label: "CUDA 10.1"
-    plugins:
-      - JuliaCI/julia#v1:
-          version: 1.6
-      - JuliaCI/julia-test#v1: ~
-      - JuliaCI/julia-coverage#v1:
-          codecov: true
-          dirs:
-            - src
-            - lib
-            - examples
-    agents:
-      queue: "juliagpu"
-      cuda: "10.1"
-    env:
-      JULIA_CUDA_VERSION: '10.1'
-      JULIA_CUDA_USE_BINARYBUILDER: 'true'
-    if: build.message !~ /\[skip tests\]/ && !build.pull_request.draft
-    timeout_in_minutes: 120
-
-
-   # special tests
-
-  - label: "Windows"
-    plugins:
-      - JuliaCI/julia#v1:
-          version: 1.6
-      - JuliaCI/julia-test#v1: ~
-      - JuliaCI/julia-coverage#v1:
-          codecov: true
-          dirs:
-            - src
-            - lib
-            - examples
-    agents:
-      queue: "juliagpu-windows"
-      cuda: "*"
-    if: build.message !~ /\[skip tests\]/ && !build.pull_request.draft
-    timeout_in_minutes: 120
-
-  - label: "NNlibCUDA.jl"
-    plugins:
-      - JuliaCI/julia#v1:
-          version: 1.6
-      - JuliaCI/julia-coverage#v1:
-          codecov: true
-          dirs:
-            - src
-            - lib
-            - examples
-    command: |
-      julia -e 'using Pkg;
-
-                println("--- :julia: Instantiating project");
-                Pkg.develop(PackageSpec(path=pwd()));
-                Pkg.add(PackageSpec(name="NNlibCUDA", rev="master"));
-                Pkg.instantiate();
-
-                println("+++ :julia: Running tests");
-                Pkg.test("NNlibCUDA"; coverage=true);'
-    agents:
-      queue: "juliagpu"
-      cuda: "*"
-    if: build.message !~ /\[skip tests\]/ && !build.pull_request.draft
-    timeout_in_minutes: 60
-
-
-  # other tasks
-
-  # we want to benchmark every commit on the master branch, even if it failed CI
-  - wait: ~
-    continue_on_failure: true
-
-  # if we will submit results, use the benchmark queue so that we will
-  # be running on the same system each time
-  - label: "Benchmarks"
-    plugins:
-      - JuliaCI/julia#v1:
-          version: 1.6
-    env:
-      BENCHMARKS: "true"
-      CODESPEED_PROJECT: "$BUILDKITE_PIPELINE_NAME"
-      CODESPEED_BRANCH: "$BUILDKITE_BRANCH"
-      CODESPEED_COMMIT: "$BUILDKITE_COMMIT"
-      CODESPEED_EXECUTABLE: "Julia 1.6"
-    command: |
-      julia --project -e '
-        ENV["CODESPEED_ENVIRONMENT"] = ENV["BUILDKITE_AGENT_NAME"]
-
-        println("--- :julia: Instantiating project")
-        using Pkg
-        Pkg.instantiate()
-        Pkg.activate("perf")
-        Pkg.instantiate()
-        push!(LOAD_PATH, @__DIR__)
-
-        println("+++ :julia: Benchmarking")
-        include("perf/runbenchmarks.jl")'
-    agents:
-      queue: "benchmark"
-      cuda: "*"
-    if: build.message !~ /\[skip benchmarks\]/ &&
-        build.branch =~ /^master$$/ &&
-        !build.pull_request.draft
-    timeout_in_minutes: 30
-
-  - wait
-
-  # benchmarks outside of the master branch don't submit their results,
-  # so they can run on any system in the juliagpu queue.
-  - label: "Benchmarks (dry run)"
-    plugins:
-      - JuliaCI/julia#v1:
-          version: 1.6
-    command: |
-      julia --project -e '
-        println("--- :julia: Instantiating project")
-        using Pkg
-        Pkg.instantiate()
-        Pkg.activate("perf")
-        Pkg.instantiate()
-        push!(LOAD_PATH, @__DIR__)
-
-        println("+++ :julia: Benchmarking")
-        include("perf/runbenchmarks.jl")'
-    agents:
-      queue: "juliagpu"
-      cuda: "*"
-    if: build.message !~ /\[skip benchmarks\]/ &&
-        build.branch !~ /^master$$/ &&
-        !build.pull_request.draft
-    timeout_in_minutes: 30
-
-  - label: "Documentation"
-    plugins:
-      - JuliaCI/julia#v1:
-          version: 1.6
-    command: |
-      julia --project -e '
-        println("--- :julia: Instantiating project")
-        using Pkg
-        Pkg.instantiate()
-        Pkg.activate("docs")
-        Pkg.instantiate()
-        push!(LOAD_PATH, @__DIR__)
-
-        println("+++ :julia: Building documentation")
-        include("docs/make.jl")'
-    agents:
-      queue: "juliagpu"
-      cuda: "*"
-    if: build.message !~ /\[skip docs\]/ && !build.pull_request.draft
-    timeout_in_minutes: 30
-
 
 
 env:
