Disable coverage on Windows.
We don't decode secrets there.
[skip ci]

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -243,12 +243,7 @@ steps:
       - JuliaCI/julia#v1:
           version: 1.6
       - JuliaCI/julia-test#v1: ~
-      - JuliaCI/julia-coverage#v1:
-          codecov: true
-          dirs:
-            - src
-            - lib
-            - examples
+      # XXX: no coverage, as no secrets on Windows
     agents:
       queue: "juliagpu-windows"
       cuda: "*"
