--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -91,6 +91,26 @@ steps:
     # NOTE: only the latest version of CUDA that has CUDNN & CUTENSOR is tested thoroughly.
     #       once we have sufficient CI resources, expand this to all CUDA versions again.
 
+  - label: "CUDA 11.6"
+    plugins:
+      - JuliaCI/julia#v1:
+          version: 1.6
+      - JuliaCI/julia-test#v1: ~
+      - JuliaCI/julia-coverage#v1:
+          codecov: true
+          dirs:
+            - src
+            - lib
+            - examples
+    agents:
+      queue: "juliagpu"
+      cuda: "11.0"
+    env:
+      JULIA_CUDA_VERSION: '11.6'
+      JULIA_CUDA_USE_BINARYBUILDER: 'true'
+    if: build.message !~ /\[skip tests\]/ && !build.pull_request.draft
+    timeout_in_minutes: 120
+
   - label: "CUDA 11.5"
     plugins:
       - JuliaCI/julia#v1:
