--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -224,8 +224,6 @@ steps:
     plugins:
       - JuliaCI/julia#v1:
           version: 1.6
-      - JuliaCI/julia-test#v1:
-          package: "CUTENSORNET.jl"
       - JuliaCI/julia-coverage#v1:
           codecov: true
           dirs:
@@ -241,6 +239,12 @@ steps:
       JULIA_CUDA_USE_BINARYBUILDER: 'true'
     if: build.message !~ /\[skip tests\]/ && !build.pull_request.draft
     timeout_in_minutes: 120
+    commands: |
+      export JULIA_PROJECT="CUTENSORNET"
+      export JULIA_LOAD_PATH="@"
+      julia -e 'import Pkg; Pkg.instantiate()'
+      julia -e 'import Pkg; Pkg.precompile()'
+      julia -e 'import Pkg; Pkg.test()'
 
 
   # other tasks
