--- a/res/wrap/Project.toml
+++ b/res/wrap/Project.toml
@@ -5,6 +5,8 @@ CUDNN_jll = "62b44479-cb7b-5706-934f-f13b2eb2e645"
 CUTENSOR_jll = "35b6c64b-1ee1-5834-92a3-3f624899209a"
 Clang = "40e3b903-d033-50b4-a0cc-940c62c95e31"
 Tokenize = "0796e94c-ce3b-5d07-9a54-7f471281c624"
+cuQuantum_jll = "b75408ef-6fdf-5d74-b65a-7df000ad18e6"
 
 [compat]
-julia = "1.4"
+Clang = "< 0.14"
+julia = "1.6"
