Allow NNlibCUDA to fail for now. [ci skip]

--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -244,6 +244,8 @@ steps:
           cuda: "*"
         if: build.message !~ /\[skip tests\]/ && !build.pull_request.draft
         timeout_in_minutes: 60
+        soft_fail:
+          - exit_status: 1
 
   - group: ":eyes: Special"
     depends_on: "cuda"
