--- a/.buildkite/pipeline.yml
+++ b/.buildkite/pipeline.yml
@@ -18,6 +18,8 @@ steps:
         agents:
           queue: "juliagpu"
           cuda: "*"
+        commands: |
+          julia --project -e 'using CUDA; CUDA.set_runtime_version!("local")'
         if: build.message !~ /\[skip tests\]/
         timeout_in_minutes: 120
 
@@ -35,6 +37,8 @@ steps:
         agents:
           queue: "juliagpu"
           cuda: "*"
+        commands: |
+          julia --project -e 'using CUDA; CUDA.set_runtime_version!("local")'
         if: build.message !~ /\[skip tests\]/ && !build.pull_request.draft
         timeout_in_minutes: 120
 
@@ -52,6 +56,8 @@ steps:
         agents:
           queue: "juliagpu"
           cuda: "*"
+        commands: |
+          julia --project -e 'using CUDA; CUDA.set_runtime_version!("local")'
         if: build.message !~ /\[skip tests\]/ && !build.pull_request.draft
         timeout_in_minutes: 120
 
@@ -69,6 +75,8 @@ steps:
         agents:
           queue: "juliagpu"
           cuda: "*"
+        commands: |
+          julia --project -e 'using CUDA; CUDA.set_runtime_version!("local")'
         if: build.message !~ /\[skip tests\]/ && !build.pull_request.draft
         timeout_in_minutes: 120
         soft_fail:
@@ -98,9 +106,6 @@ steps:
           queue: "juliagpu"
           cuda: "11.0"
           cap: "sm_80"
-        env:
-          JULIA_CUDA_VERSION: "{{matrix}}"
-          JULIA_CUDA_USE_BINARYBUILDER: 'true'
         if: build.message !~ /\[skip tests\]/ && !build.pull_request.draft
         timeout_in_minutes: 120
         matrix:
@@ -113,14 +118,15 @@ steps:
           - "11.2"
           - "11.1"
           - "11.0"
+        commands: |
+          julia --project -e 'using CUDA; CUDA.set_runtime_version!(v"{{matrix}}")'
 
       # XXX: we cannot set an agents key (cap: "sm_75") via a build matrix
       - label: "CUDA 10.2"
         plugins:
           - JuliaCI/julia#v1:
               version: 1.6
-          - JuliaCI/julia-test#v1:
-              test_args: "--thorough"
+          - JuliaCI/julia-test#v1: ~
           - JuliaCI/julia-coverage#v1:
               codecov: true
               dirs:
@@ -131,17 +137,15 @@ steps:
           queue: "juliagpu"
           cuda: "10.2"
           cap: "sm_75"
-        env:
-          JULIA_CUDA_VERSION: '10.2'
-          JULIA_CUDA_USE_BINARYBUILDER: 'true'
         if: build.message !~ /\[skip tests\]/ && !build.pull_request.draft
         timeout_in_minutes: 120
+        commands: |
+          julia --project -e 'using CUDA; CUDA.set_runtime_version!(v"10.2")'
 
   - group: ":nesting_dolls: Subpackages"
     depends_on: "cuda"
     steps:
-      # NOTE: we Pkg.develop all subpackages so that they can depend on each other
-      - label: "{{matrix}} on CUDA 10.2"
+      - label: "{{matrix}} on CUDA 10"
         matrix:
             - "CUDNN"
             - "CUTENSOR"
@@ -158,26 +162,23 @@ steps:
           queue: "juliagpu"
           cuda: "10.2"
           cap: "sm_75"
-        env:
-          JULIA_CUDA_VERSION: "10.2"
-          JULIA_CUDA_USE_BINARYBUILDER: 'true'
         if: build.message !~ /\[skip tests\]/ && !build.pull_request.draft
         timeout_in_minutes: 120
         commands: |
           julia -e '
             using Pkg
 
-            println("--- :julia: Instantiating projects");
-            Pkg.develop([PackageSpec(path=pwd()), # CUDA
-                         PackageSpec(path=joinpath(pwd(), "lib", "cudnn")),
-                         PackageSpec(path=joinpath(pwd(), "lib", "cutensor")),
-                         PackageSpec(path=joinpath(pwd(), "lib", "cutensornet")),
-                         PackageSpec(path=joinpath(pwd(), "lib", "custatevec"))])
+            println("--- :julia: Instantiating project")
+            Pkg.develop(; path=joinpath(pwd(), "lib", lowercase("{{matrix}}")))
+            Pkg.activate("{{matrix}}")
 
-            println("+++ :julia: Running tests");
-            Pkg.test("{{matrix}}")'
+            Pkg.develop(; path=pwd())
+            using CUDA
+            CUDA.set_runtime_version!(v"10.2")
 
-      - label: "{{matrix}} on CUDA 11.8"
+            println("+++ :julia: Running tests")
+            Pkg.test()'
+      - label: "{{matrix}} on CUDA 11"
         matrix:
             - "CUDNN"
             - "CUTENSOR"
@@ -196,24 +197,22 @@ steps:
           queue: "juliagpu"
           cuda: "11.0"
           cap: "sm_80"
-        env:
-          JULIA_CUDA_VERSION: "11.8"
-          JULIA_CUDA_USE_BINARYBUILDER: 'true'
         if: build.message !~ /\[skip tests\]/ && !build.pull_request.draft
         timeout_in_minutes: 120
         commands: |
           julia -e '
             using Pkg
 
-            println("--- :julia: Instantiating projects");
-            Pkg.develop([PackageSpec(path=pwd()), # CUDA
-                         PackageSpec(path=joinpath(pwd(), "lib", "cudnn")),
-                         PackageSpec(path=joinpath(pwd(), "lib", "cutensor")),
-                         PackageSpec(path=joinpath(pwd(), "lib", "cutensornet")),
-                         PackageSpec(path=joinpath(pwd(), "lib", "custatevec"))])
+            println("--- :julia: Instantiating project")
+            Pkg.develop(; path=joinpath(pwd(), "lib", lowercase("{{matrix}}")))
+            Pkg.activate("{{matrix}}")
 
-            println("+++ :julia: Running tests");
-            Pkg.test("{{matrix}}")'
+            Pkg.develop(; path=pwd())
+            using CUDA
+            CUDA.set_runtime_version!(v"11.8")
+
+            println("+++ :julia: Running tests")
+            Pkg.test()'
 
   - group: ":telescope: Downstream"
     depends_on: "cuda"
@@ -263,15 +262,18 @@ steps:
           - JuliaCI/julia-test#v1:
               run_tests: false
         command: |
-          julia --project -e 'using CUDA;
-                              @assert !CUDA.functional();
-                              CUDA.download_artifacts()'
-        env:
-          CUDA_VISIBLE_DEVICES: ''
-          JULIA_CUDA_VERSION: '11.6'
+          julia --project -e '
+            using CUDA
+            @assert !CUDA.functional()
+            @assert !isdefined(CUDA, :libcudart)
+            CUDA.set_runtime_version!(v"11.6")'
+          julia --project -e '
+            using CUDA
+            @assert !CUDA.functional()
+            @assert isdefined(CUDA, :libcudart)'
         agents:
           queue: "juliagpu"
-          cuda: "*"
+          intel: "*"
         if: build.message !~ /\[skip tests\]/ && !build.pull_request.draft
         timeout_in_minutes: 60
 
@@ -314,9 +316,9 @@ steps:
           cuda: "11.0"
           cap: "sm_80"
         env:
-          JULIA_CUDA_VERSION: '11.6'
           JULIA_CUDA_USE_COMPAT: 'false'  # NVIDIA bug #3418723: injection tools prevent probing libcuda
-          JULIA_CUDA_USE_BINARYBUILDER: 'true'
+        commands: |
+          julia --project -e 'using CUDA; CUDA.set_runtime_version!(v"11.6")'
         if: build.message !~ /\[skip tests\]/ &&
             build.branch =~ /^master$$/
         timeout_in_minutes: 240
