--- a/lib/cudnn/Project.toml
+++ b/lib/cudnn/Project.toml
@@ -6,4 +6,8 @@ version = "0.1.0"
 [deps]
 CEnum = "fa961155-64e5-5f13-b03f-caf6b980ea82"
 CUDA = "052768ef-5323-5732-b1bb-66c8b64840ba"
+CUDNN_jll = "62b44479-cb7b-5706-934f-f13b2eb2e645"
 Libdl = "8f399da3-3557-5675-b5ff-fb832c97cbdb"
+
+[compat]
+CUDNN_jll = "~8.6"
