--- a/res/wrap/cufft.toml
+++ b/res/wrap/cufft.toml
@@ -3,6 +3,12 @@ library_name = "libcufft"
 output_file_path = "../../lib/cufft/libcufft.jl"
 prologue_file_path = "./libcufft_prologue.jl"
 
+output_ignorelist = [
+    # these change often
+    "^CUFFT_VERSION$",
+    "^CUFFT_VER_",
+]
+
 
 [codegen]
 always_NUL_terminated_string = true
