--- a/res/wrap/cupti.toml
+++ b/res/wrap/cupti.toml
@@ -4,7 +4,10 @@ output_file_path = "../../lib/cupti/libcupti.jl"
 prologue_file_path = "./libcupti_prologue.jl"
 
 output_ignorelist = [
-    "_STRUCT_SIZE$"
+    # unexpanded macro (TODO: expand during rewrite?)
+    "_STRUCT_SIZE$",
+    # these change often
+    "^CUPTI_API_VERSION$",
 ]
 
 
