--- a/res/wrap/cuda.toml
+++ b/res/wrap/cuda.toml
@@ -4,9 +4,12 @@ output_file_path = "../../lib/cudadrv/libcuda.jl"
 prologue_file_path = "./libcuda_prologue.jl"
 
 output_ignorelist = [
+    # we'll be using our own pointer types
     "^CUdeviceptr",
     "^CUarray$",
-    "^CUstream$", "^CUstream_st$"
+    "^CUstream$", "^CUstream_st$",
+    # these change often
+    "^CUDA_VERSION$",
 ]
 
 
