--- a/res/wrap/cusolver.toml
+++ b/res/wrap/cusolver.toml
@@ -4,7 +4,11 @@ output_file_path = "../../lib/cusolver/libcusolver.jl"
 prologue_file_path = "./libcusolver_prologue.jl"
 
 output_ignorelist = [
-    "CUSOLVER_CPP_VERSION"
+    # generates bad code
+    "^CUSOLVER_CPP_VERSION$",
+    # these change often
+    "^CUSOLVER_VERSION$",
+    "^CUSOLVER_VER_",
 ]
 
 
