Format the wrapper sources.

--- a/res/wrap/Project.toml
+++ b/res/wrap/Project.toml
@@ -4,6 +4,7 @@ CUDA_full_jll = "4f82f1eb-248c-5f56-a42e-99106d144614"
 CUDNN_jll = "62b44479-cb7b-5706-934f-f13b2eb2e645"
 CUTENSOR_jll = "35b6c64b-1ee1-5834-92a3-3f624899209a"
 Clang = "40e3b903-d033-50b4-a0cc-940c62c95e31"
+JuliaFormatter = "98e50ef6-434e-11e9-1051-2b60c6c9e899"
 Libglvnd_jll = "7e76a0d4-f3c7-5321-8279-8d96eeed0f29"
 Tokenize = "0796e94c-ce3b-5d07-9a54-7f471281c624"
 cuQuantum_jll = "b75408ef-6fdf-5d74-b65a-7df000ad18e6"
