Use the ccall macro form, for clarity.

--- a/res/wrap/cusolverMg.toml
+++ b/res/wrap/cusolverMg.toml
@@ -4,8 +4,8 @@ output_file_path = "../../lib/cusolver/libcusolverMg.jl"
 
 
 [codegen]
+use_ccall_macro = true
 always_NUL_terminated_string = true
-
 
 
 [api]
